fix: remove importmap to avoid white page in production

--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>/* Moved most styles to index.css for responsiveness */</style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/client": "https://esm.sh/react-dom@^18.2.0/client",
-    "react": "https://esm.sh/react@^18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/"
-  }
-}
-</script>
+<!-- importmap removed; Vite bundles dependencies for production -->
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
